--- a/content.html
+++ b/content.html
@@ -12,7 +12,7 @@
     <class class="container">
         <div class="row">
             <div class="col col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum hic dolorum blanditiis, qui tempora provident cupiditate quisquam quos odio veniam quo eligendi. Distinctio, perspiciatis ratione autem aut voluptates eligendi incidunt.
+               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus illum reprehenderit consequuntur maxime eveniet non vitae maiores aperiam minima possimus a, exercitationem laudantium assumenda ex harum sunt delectus. Nostrum, quibusdam.
             </div>
             <div class="col col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores doloribus obcaecati aspernatur esse, ullam tempora nesciunt blanditiis libero? Nulla, repellendus dolorem. Nesciunt quidem et odit necessitatibus! Neque, est harum. Animi!
