--- a/user.html
+++ b/user.html
@@ -12,23 +12,24 @@
     <div class="container">
         <div class="row">
             <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                <table class="table">
+                <table>
                     <tr>
                         <td>Username</td>
                         <td><input type="text" class="form-control"></td>
                     </tr>
                     <tr>
                         <td>Password</td>
-                        <td><input type="text" class="password form-control"></td>
+                        <td><password class="form-control"></password></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><button class="btn btn-success">LOGIN</button></td>
+                        <td><button class="btn btn-primary">LOGIN</button></td>
                     </tr>
                 </table>
+
             </div>
-            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                <table class="table">
+            <div class="col ol col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <table>
                     <tr>
                         <td>Name</td>
                         <td><input type="text" class="form-control"></td>
@@ -44,6 +45,7 @@
                     <tr>
                         <td>District</td>
                         <td><select name="" id="" class="form-control">
+                            <option value="Select">Select</option>
                             <option value="Thiruvanathapuram">Thiruvanathapuram</option>
                             <option value="Kollam">Kollam</option>
                             <option value="Pathanamthitta">Pathanamthitta</option>
@@ -74,7 +76,7 @@
                         </select></td>
                     </tr>
                     <tr>
-                        <td>Mobile Number</td>
+                        <td>Mob Number</td>
                         <td><input type="text" class="form-control"></td>
                     </tr>
                     <tr>
@@ -105,13 +107,14 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><button class="btn btn-success">REGISTER</button></td>
+                        <td><button class="btn btn-primary">REGISTER</button></td>
                     </tr>
                 </table>
+
             </div>
         </div>
     </div>
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+   <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> 
 </body>
 </html>
